Fix: change publishdata to the format compatible with react and fix overflow problem

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -64,6 +64,7 @@ body {
 .main-content {
   display: flex;
   flex-grow: 1;
+  overflow: auto;
 }
 
 .sidebar {
@@ -124,7 +125,7 @@ body {
 
 .featured-article {
   display: flex;
-  height: 30%;
+  /* height: 30%; */
   flex-direction: column;
   margin-bottom: 40px;
 }
@@ -172,11 +173,11 @@ body {
 
 .author-name {
   font-size: 0.875rem;
-  margin-right: 0.5rem;
+  /* margin-right: 0.5rem; */
 }
 
 .publish-date {
-  font-size: 0.875rem;
+  font-size: 0.7rem;
   color: #fff;
 }
 
@@ -184,6 +185,7 @@ body {
   display: grid;
   gap: 2rem;
   margin-bottom: 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
 .article-image {
@@ -218,7 +220,7 @@ body {
   cursor: pointer;
 }
 .footer {
-  padding: 50px 0;
+  /* padding: 50px 0; */
   color: #ffffff;
   background-color: #04353c;
 }
@@ -279,6 +281,15 @@ body {
   }
 }
 
+.article-image {
+  width: 100%;
+  height: 15rem;
+  object-fit: cover;
+  margin-bottom: 1rem;
+}
+.featured-image{
+  height: 18rem;
+}
 
 @media (max-width: 480px) {
   .get-started-btn{
